Implementazione grafica gioco dei dadi pt.2

--- a/bonus dadi/index.html
+++ b/bonus dadi/index.html
@@ -31,8 +31,8 @@
          <div class="tiroComputer">
            Tiro del Computer: <input type="text" readonly="" class="form-control-color" id="dadoComputer" value="">
          </div>
-         <div class="vincitore my-3">
-            <input type="text" readonly="" class="form-control text-center bg-dark text-warning" id="vincitore" value="">
+         <div class="vincitore d-flex justify-content-center my-3">
+            <input style="width: 300px;" type="text" readonly="" class="form-control text-center bg-dark text-warning" id="vincitore" value="">
          </div>
       </div>
 
